# compareTestTool

./: .pylero  pyproject.toml
test_runs_compare_tool/: polarion_test_compare.py
