[tool.poetry]
name = "test-runs-compare-tool"
version = "0.1.0"
description = ""
authors = ["Milana Levy <millevy@redhat.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pylero = "^0.1.0"


[tool.poetry.group.dev.dependencies]
ipython = "^8.25.0"
ipdb = "^0.13.13"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
